--- a/src/streamlit_component_x/frontend/style.css
+++ b/src/streamlit_component_x/frontend/style.css
@@ -148,15 +148,16 @@ input {
 .label-collapsed .input {
   top: 0 !important;
 } 
+
 #suggestion {
+  position: relative;
   width: inherit;
   height: inherit;
-  position: relative;
   z-index: 2;
   top: 0;
   right: 3px;
   display: flex;
-  align-items: center;
+  align-items: right;
   padding: 0 18px;
   font-size: 25px;
   color: #868686;
